# PySpoof

./: .gitignore  README.md  app.py  app.py~  config.json~  config.py  config.py~  output.txt  preferences.py  pyproject.toml  requirements.txt  requirements.txt~  run.bat  run.bat~  run.py  run.py~  spoofer.py  spoofer.py~  system_information.py  system_information.py~  systeminformation.py  systeminformation.py~
listeners/: update_info_listener.py  update_info_listener.py~
logs/: motherboard.txt  output.txt  system_logs.txt
resources/: backup.reg  bios_override.mof  config.json  config.json~  installed_packages.txt
resources/tests/: test_config.json
spoofers/: mac_spoofer.py  mac_spoofer.py~  motherboard_spoof.py  spoofer.py  spoofer.py~  verify_spoof.py
tests/: test_config.json  test_config.py  test_config.py~
tests/__pycache__/: test_config.cpython-313-pytest-8.3.5.pyc.15812
utils/: ERROR.py  formats.py  formats.py~  generator.py  generator.py~  logger.py  logger.py~  update_wmi.py  update_wmi.py~
utils/__pycache__/: logger.cpython-313.pyc.2212908869424
